--- a/cicd/translation/package.json
+++ b/cicd/translation/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@actions/core": "^1.5.0",
     "axios": "^0.21.1",
     "deepl": "^1.0.12",
     "node-deepl": "^1.0.0"
