--- a/cicd/translation/package.json
+++ b/cicd/translation/package.json
@@ -12,7 +12,8 @@
     "@actions/core": "^1.5.0",
     "axios": "^0.21.1",
     "deepl": "^1.0.12",
-    "node-deepl": "^1.0.0"
+    "node-deepl": "^1.0.0",
+    "random-string": "^0.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
